fix: z-index값 수정

--- a/src/app/room/[id]/page.module.css
+++ b/src/app/room/[id]/page.module.css
@@ -14,7 +14,7 @@
   transform: translateX(-400px);
   transition: transform ease 0.4s;
   width: 400px;
-  z-index: 9;
+  z-index: 15;
 }
 
 .map {
